--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Composite Seismic Hazard Web Service Documentation</title>
+  <title>Seismic Design Web Service Documentation</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -14,10 +14,10 @@
 
 <main>
   <header>
-    <h1>Composite Seismic Hazard Web Service Documentation</h1>
+    <h1>Seismic Design Web Service Documentation</h1>
     <p>
-      Web service to access information from <abbr
-      title="National Seismic Hazard Mapping Project">NSHMP</abbr> database.
+      Web service to compute data corresponding to various seismic design
+      provisions.
     </p>
   </header>
 </main>
