updated link text

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -20,6 +20,11 @@
       provisions.
     </p>
   </header>
+
+  <h2>EndPoint</h2>
+  <p>
+    Earthquake design web service endpoint <a href="design.html">API</a>.
+  </p>
 </main>
 
 </body>
