--- a/src/htdocs/design.html
+++ b/src/htdocs/design.html
@@ -127,7 +127,7 @@
 
           <dt id="response-metadata-ssMaxDirection">ssMaxDirection</dt>
           <dd>
-            Factor applyed ot the geometric mean ground motion to get max
+            Factor applyed to the geometric mean ground motion to get max
             direction ground motion. (0.2 second)
           </dd>
 
