commented out things that are not needed at the moment but will be later on

--- a/src/htdocs/design.html
+++ b/src/htdocs/design.html
@@ -141,10 +141,10 @@
       <dt id="response-data">data</dt>
       <dd>
         <dl>
-          <dt id="response-data-designCategory">designCategory</dt>
+          <!-- <dt id="response-data-designCategory">designCategory</dt>
           <dd>
             Seismic design category.
-          </dd>
+          </dd> -->
 
           <dt id="response-data-fa">fa</dt>
           <dd>
@@ -207,10 +207,10 @@
             Numeric seismic design value at 0.2 second SA.
           </dd>
 
-          <dt id="response-data-sdSpectrum">sdSpectrum</dt>
+          <!-- <dt id="response-data-sdSpectrum">sdSpectrum</dt>
           <dd>
             Seismic design spectrum.
-          </dd>
+          </dd> -->
 
           <dt id="response-data-sm1">sm1</dt>
           <dd>
@@ -248,10 +248,10 @@
             Uniform risk ground motion. (0.2 second)
           </dd>
 
-          <dt id="response-data-tl">tl</dt>
+          <!-- <dt id="response-data-tl">tl</dt>
           <dd>
             Long-period transition period.
-          </dd>
+          </dd> -->
         </dl>
       </dd>
     </dl>
@@ -293,17 +293,7 @@
             "sm1": 1.39,
             "pgam": 1.08,
             "sds": 1.9,
-            "sd1": 0.9,
-            "tl": 8,
-            "designCategory": E,
-            "sdSpectrum": [
-              0.0,
-              0.761
-            ],
-            "smSpectrum": [
-              0.0,
-              1.141
-            ]
+            "sd1": 0.9
           }
         }
       }
