changed endpoint to available end points and changed how endpoints were listed

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -21,9 +21,9 @@
     </p>
   </header>
 
-  <h2>EndPoint</h2>
+  <h2>Availabe End Points</h2>
   <p>
-    Earthquake design web service endpoint <a href="design.html">API</a>.
+    <a href="design.html">design.json</a>.
   </p>
 </main>
 
