added introductry text

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -16,8 +16,9 @@
   <header>
     <h1>Seismic Design Web Service Documentation</h1>
     <p>
-      Web service to compute data corresponding to various seismic design
-      provisions.
+      This seismic web services represent a suite of services accessible as a
+      service pipeline via a composite web service to compute data corresponding
+      to various seismic design provisions.
     </p>
   </header>
 
