--- a/src/htdocs/design.html
+++ b/src/htdocs/design.html
@@ -46,7 +46,7 @@
     <dt id="siteClass">siteClass</dt>
     <dd>
       NEHRP site classification.
-      <br/>Example: <code>B</code>
+      <br/>Example: <code>C</code>
     </dd>
 
     <dt id="title">title</dt>
