updated end points list

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -23,9 +23,9 @@
   </header>
 
   <h2>Availabe End Points</h2>
-  <p>
-    <a href="design.html">design.json</a>.
-  </p>
+  <ul>
+    <li><a href="design.html">design.json</a> Documentation.</li>
+  </ul>
 </main>
 
 </body>
