changed intro text

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -16,9 +16,9 @@
   <header>
     <h1>Seismic Design Web Service Documentation</h1>
     <p>
-      This seismic web services represent a suite of services accessible as a
-      service pipeline via a composite web service to compute data corresponding
-      to various seismic design provisions.
+      Web service provided by the U.S. Geological Survey for computing seismic
+      design parameters compatible with various building code reference
+      documents.
     </p>
   </header>
 
