change reference document identifier example

--- a/src/htdocs/design.html
+++ b/src/htdocs/design.html
@@ -34,7 +34,7 @@
     <dt id="referenceDocument">referenceDocument</dt>
     <dd>
       Building code reference document identifier.
-      <br/>Example: <code>NEHRP2015</code>
+      <br/>Example: <code>2015 NEHRP Provisions</code>
     </dd>
 
     <dt id="riskCategory">riskCategory</dt>
