--- a/src/htdocs/design.html
+++ b/src/htdocs/design.html
@@ -132,51 +132,10 @@
           <dt id="data-data">data</dt>
           <dd>
             <dl>
-              <dt id="data-data-ss">ss</dt>
+              <dt id="data-data-pgauh">pgauh</dt>
               <dd>
-                MCE<sub>r</sub> ground motion. (for 0.2 second period)
-              </dd>
-
-              <dt id="data-data-s1">s1</dt>
-              <dd>
-                MCE<sub>r</sub> ground motion. (for 1.0s period)
-              </dd>
-
-              <dt id="data-data-pga">pga</dt>
-              <dd>
-                MCEg peak ground acceleration.
-              </dd>
-
-              <dt id="data-data-ssuh">ssuh</dt>
-              <dd>
-                Uniform-hazard (2% probability of exceedance in 50 years)
-                spectral acceleration.
-              </dd>
-
-              <dt>ssrt</dt>
-              <dd>
-                Probabilistic risk-targeted ground motion. (0.2 second)
-              </dd>
-
-              <dt id="data-data-ssd">ssd</dt>
-              <dd>
-                Factored deterministic acceleration value. (0.2 second)
-              </dd>
-
-              <dt id="data-data-s1uh">s1uh</dt>
-              <dd>
-                Factored uniform-hazard (2% probability of exceedance in 50
-                years) spectral acceleration.
-              </dd>
-
-              <dt>s1rt</dt>
-              <dd>
-                Probabilistic risk-targeted ground motion. (1.0 second)
-              </dd>
-
-              <dt id="data-data-s1d">s1d</dt>
-              <dd>
-                Factored deterministic acceleration value. (1.0 second)
+                Uniform-hazard (2% probability of exceedance in 50 years) Peak
+                Ground Acceleration
               </dd>
 
               <dt id="data-data-pgad">pgad</dt>
@@ -185,14 +144,14 @@
                 Acceleration)
               </dd>
 
-              <dt id="data-data-sms">sms</dt>
+              <dt id="data-data-pga">pga</dt>
               <dd>
-                Site-modified spectral acceleration value.
+                MCE<sub>G</sub> peak ground acceleration.
               </dd>
 
-              <dt id="data-data-sm1">sm1</dt>
+              <dt id="data-data-fpga">fpga</dt>
               <dd>
-                Site-modified spectral acceleration value.
+                Site amplification factor at PGA
               </dd>
 
               <dt id="data-data-pgam">pgam</dt>
@@ -200,14 +159,106 @@
                 Site modified peak ground acceleration.
               </dd>
 
+              <dt>ssrt</dt>
+              <dd>
+                Probabilistic risk-targeted ground motion. (0.2 second)
+              </dd>
+
+              <dt id="data-data-ssuh">ssuh</dt>
+              <dd>
+                Factored uniform-hazard (2% probability of exceedance in 50
+                years) spectral acceleration.
+              </dd>
+
+              <dt id="data-data-ssd">ssd</dt>
+              <dd>
+                Factored deterministic acceleration value. (0.2 second)
+              </dd>
+
+              <dt id="data-data-ss">ss</dt>
+              <dd>
+                MCE<sub>R</sub> ground motion. (for 0.2 second period)
+              </dd>
+
+              <dt id="data-data-fa">fa</dt>
+              <dd>
+                Site amplification factor at 0.2 second
+              </dd>
+
+              <dt id="data-data-sms">sms</dt>
+              <dd>
+                Site-modified spectral acceleration value.
+              </dd>
+
               <dt id="data-data-sds">sds</dt>
               <dd>
                 Numeric seismic design value at 0.2 second SA.
               </dd>
 
+              <dt id="data-data-sdcs">sdcs</dt>
+              <dd>
+                Seismic design category from sds
+              </dd>
+
+              <dt>s1rt</dt>
+              <dd>
+                Probabilistic risk-targeted ground motion. (1.0 second)
+              </dd>
+
+              <dt id="data-data-s1uh">s1uh</dt>
+              <dd>
+                Factored uniform-hazard (2% probability of exceedance in 50
+                years) spectral acceleration.
+              </dd>
+
+              <dt id="data-data-s1d">s1d</dt>
+              <dd>
+                Factored deterministic acceleration value. (1.0 second)
+              </dd>
+
+              <dt id="data-data-s1">s1</dt>
+              <dd>
+                MCE<sub>R</sub> ground motion. (for 1.0s period)
+              </dd>
+
+              <dt id="data-data-fv">fv</dt>
+              <dd>
+                Site amplification factor at 1.0 second.
+              </dd>
+
+              <dt id="data-data-sm1">sm1</dt>
+              <dd>
+                Site-modified spectral acceleration value.
+              </dd>
+
               <dt id="data-data-sd1">sd1</dt>
               <dd>
                 Numeric seismic design value at 1.0 second SA.
+              </dd>
+
+              <dt id="data-data-sdc1">sdc1</dt>
+              <dd>
+                Seismic design category from sd1.
+              </dd>
+
+              <dt id="data-data-sdc">sdc</dt>
+              <dd>
+                Seismic design category from sdcs and sdc1.
+              </dd>
+
+              <dt id="data-data-tl">tl</dt>
+              <dd>
+                Long-period transition period.
+              </dd>
+
+              <dt id="data-data-sdSpectrum">sdSpectrum</dt>
+              <dd>
+                Seismic design spectrum.
+              </dd>
+
+              <dt id="data-data-smSpectrum">smSpeectrum</dt>
+              <dd>
+                Site modified spectrum.
               </dd>
             </dl>
           </dd>
@@ -216,40 +267,28 @@
           <dt>metadata</dt>
           <dd>
             <dl>
-              <dt id="data-metadata-ssMaxDirection">ssMaxDirFactor</dt>
-              <dd>
-                Factor applyed to the geometric mean ground motion to get
-                max direction ground motion. (0.2 second)
-              </dd>
-
-              <dt id="data-metadata-1sMaxDirection">s1MaxDirFactor</dt>
-              <dd>
-                Factor applyed to the geometric mean ground motion to get max
-                direction ground motion. (1.0 second)
-              </dd>
-
-              <dt id="data-metadata-ssPercentile">ssdPercentileFactor</dt>
-              <dd>
-                Factor applyed to 50% ground motion to achieve target percentile
-                ground motion. (0.2 second)
-              </dd>
-
-              <dt id="data-metadata-s1Percentile">s1dPercentileFactor</dt>
-              <dd>
-                Factor applyed to 50% ground motion to achieve target percentile
-                ground motion. (1.0 second)
-              </dd>
-
-              <dt id="data-metadata-pgaPercentile">pgadPercentileFactor</dt>
+              <dt id="data-metadata-pgadPercentile">pgadPercentileFactor</dt>
               <dd>
                 Factor applyed to 50% ground motion to achieve target percentile
                 ground motion. (Peak Ground Acceleration)
               </dd>
 
-              <dt id="data-metadata-ssdFloor">ssdFloor</dt>
+              <dt id="data-metadata-pgadFloor">pgadFloor</dt>
               <dd>
                 Minimum constraint placed on the deterministic ground motion.
-                (0.2 second)
+                (Peak Ground Acceleration)
+              </dd>
+
+              <dt id="data-metadata-s1MaxDirection">s1MaxDirFactor</dt>
+              <dd>
+                Factor applyed to the geometric mean ground motion to get max
+                direction ground motion. (1.0 second)
+              </dd>
+
+              <dt id="data-metadata-s1dPercentile">s1dPercentileFactor</dt>
+              <dd>
+                Factor applyed to 50% ground motion to achieve target percentile
+                ground motion. (1.0 second)
               </dd>
 
               <dt id="data-metadata-s1dFloor">s1dFloor</dt>
@@ -258,10 +297,22 @@
                 (1.0 second)
               </dd>
 
-              <dt id="data-metadata-pgaFloor">pgadFloor</dt>
+              <dt id="data-metadata-ssMaxDirection">ssMaxDirFactor</dt>
+              <dd>
+                Factor applyed to the geometric mean ground motion to get
+                max direction ground motion. (0.2 second)
+              </dd>
+
+              <dt id="data-metadata-ssPercentile">ssdPercentileFactor</dt>
+              <dd>
+                Factor applyed to 50% ground motion to achieve target percentile
+                ground motion. (0.2 second)
+              </dd>
+
+              <dt id="data-metadata-ssdFloor">ssdFloor</dt>
               <dd>
                 Minimum constraint placed on the deterministic ground motion.
-                (Peak Ground Acceleration)
+                (0.2 second)
               </dd>
             </dl>
           </dl>
