Typos. Removed output that is not yet generated.

--- a/src/htdocs/design.html
+++ b/src/htdocs/design.html
@@ -195,10 +195,10 @@
                 Numeric seismic design value at 0.2 second SA.
               </dd>
 
-              <dt id="data-data-sdcs">sdcs</dt>
+              <!-- <dt id="data-data-sdcs">sdcs</dt>
               <dd>
                 Seismic design category from sds
-              </dd>
+              </dd> -->
 
               <dt>s1rt</dt>
               <dd>
@@ -236,27 +236,27 @@
                 Numeric seismic design value at 1.0 second SA.
               </dd>
 
-              <dt id="data-data-sdc1">sdc1</dt>
+              <!-- <dt id="data-data-sdc1">sdc1</dt>
               <dd>
                 Seismic design category from sd1.
-              </dd>
+              </dd> -->
 
               <dt id="data-data-sdc">sdc</dt>
               <dd>
                 Seismic design category from sdcs and sdc1.
               </dd>
 
-              <dt id="data-data-tl">tl</dt>
+              <!-- <dt id="data-data-tl">tl</dt>
               <dd>
                 Long-period transition period.
-              </dd>
+              </dd> -->
 
               <dt id="data-data-sdSpectrum">sdSpectrum</dt>
               <dd>
                 Seismic design spectrum.
               </dd>
 
-              <dt id="data-data-smSpectrum">smSpeectrum</dt>
+              <dt id="data-data-smSpectrum">smSpectrum</dt>
               <dd>
                 Site modified spectrum.
               </dd>
