--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -24,7 +24,7 @@
 
   <h2>Availabe End Points</h2>
   <ul>
-    <li><a href="design.html">design.json</a> Documentation.</li>
+    <li><a href="asce7-16.html">asce7-16.json</a> Documentation.</li>
   </ul>
 </main>
 
