Added documentation for ASCE41-13.

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,6 +25,7 @@
   <h2>Availabe End Points</h2>
   <ul>
     <li><a href="asce7-16.html">asce7-16.json</a> Documentation.</li>
+    <li><a href="asce41-13.html">asce41-13.json</a> Documentation.</li>
   </ul>
 </main>
 
