--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <title>Seismic Design Web Service Documentation</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
   <link rel="stylesheet" href="https://earthquake.usgs.gov/theme/site/earthquake/index.css"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Merriweather:400,400italic,700|Source+Sans+Pro:400,300,700"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons%7cMerriweather:400,400italic,700%7cSource+Sans+Pro:400,300,700"/>
   <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
@@ -16,16 +16,21 @@
   <header>
     <h1>Seismic Design Web Service Documentation</h1>
     <p>
-      Web service provided by the U.S. Geological Survey for computing seismic
+      Web services provided by the U.S. Geological Survey for computing seismic
       design parameters compatible with various building code reference
       documents.
     </p>
   </header>
 
-  <h2>Availabe End Points</h2>
+  <h2>Reference Document End Points</h2>
   <ul>
-    <li><a href="asce7-16.html">asce7-16.json</a> Documentation.</li>
-    <li><a href="asce41-13.html">asce41-13.json</a> Documentation.</li>
+    <li><a href="asce7-16.html">2016 ASCE 7 Standard (ASCE7-16)</a></li>
+    <li><a href="asce41-13.html">2013 ASCE 41 Standard (ASCE41-13)</a></li>
+  </ul>
+
+  <h2>Component Data End Points</h2>
+  <ul>
+    <li><a href="deterministic.html">Deterministic</a></li>
   </ul>
 </main>
 
