Added documentation for probabilistic endpoint. Linked to documentation from index page.

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -30,6 +30,7 @@
 
   <h2>Component Data End Points</h2>
   <ul>
+    <li><a href="probabilistic.html">Probabilistic</a></li>
     <li><a href="deterministic.html">Deterministic</a></li>
   </ul>
 </main>
