Removed mapped_ prefix from all schema and factory methods. All data is mapped data in these contexts.

--- a/src/htdocs/deterministic.html
+++ b/src/htdocs/deterministic.html
@@ -92,36 +92,20 @@
         <dt id="response-data">data</dt>
         <dd>
           <dl>
-            <dt id="response-data-mapped_pgad">mapped_pgad</dt>
+            <dt id="response-data-pgad">pgad</dt>
             <dd>
               Mapped deterministic acceleration value. (Peak Ground
               Acceleration)
             </dd>
 
-            <dt id="response-data-mapped_ssd">mapped_ssd</dt>
+            <dt id="response-data-ssd">ssd</dt>
             <dd>
               Mapped deterministic acceleration value. (0.2 second)
             </dd>
 
-            <dt id="response-data-mapped_s1d">mapped_s1d</dt>
-            <dd>
-              Mapped deterministic acceleration value. (1.0 second)
-            </dd>
-
-            <dt id="response-data-pgad">pgad</dt>
-            <dd>
-              Factored deterministic acceleration value. (Peak Ground
-              Acceleration)
-            </dd>
-
-            <dt id="response-data-ssd">ssd</dt>
-            <dd>
-              Factored deterministic acceleration value. (0.2 second)
-            </dd>
-
             <dt id="response-data-s1d">s1d</dt>
             <dd>
-              Factored deterministic acceleration value. (1.0 second)
+              Mapped deterministic acceleration value. (1.0 second)
             </dd>
           </dl>
         </dd>
@@ -197,12 +181,9 @@
   },
   "response": {
     "data": {
-      "mapped_pgad": 0.5670918,
-      "mapped_s1d": 0.53527123,
-      "mapped_ssd": 1.35112175,
-      "pgad": 1.02076524,
-      "s1d": 0.963488214,
-      "ssd": 2.4320191500000004
+      "pgad": 0.5670918,
+      "s1d": 0.53527123,
+      "ssd": 1.35112175,
     },
     "metadata": {
       "floor_pgad": 0.5,
