Updated documentation for determinstic to be consistent with probabilistic.

--- a/src/htdocs/probabilistic.html
+++ b/src/htdocs/probabilistic.html
@@ -16,8 +16,8 @@
     <h1>Probabilistic Endpoint Documentation</h1>
     <p>
       This endpoint returns NSHM probabilistic hazard ground motion values for
-      PGA, 1.0 s SA, and 2.0 s SA periods. The data has not been adjusted for
-      maximum direction or other design-specific factors. This data may be
+      PGA, 1.0 s SA, and 2.0 s SA periods. The data have not been adjusted for
+      maximum direction or other design-specific factors. The data may be
       used as <em>inputs</em> for computing ground motion data suitable for
       use with the specified reference document.
     </p>
