--- a/src/htdocs/deterministic.html
+++ b/src/htdocs/deterministic.html
@@ -14,6 +14,13 @@
 <main>
   <header>
     <h1>Deterministic Endpoint Documentation</h1>
+    <p>
+      This endpoint returns NSHM deterministic hazard ground motion values for
+      PGA, 1.0 s SA, and 2.0 s SA periods. The data have not been adjusted for
+      maximum direction or other design-specific factors. The data may be
+      used as <em>inputs</em> for computing ground motion data suitable for
+      use with the specified reference document.
+    </p>
   </header>
 
   <h2 id="parameters">Request Parameters</h2>
@@ -21,19 +28,20 @@
   <dl>
     <dt id="latitude">latitude</dt>
     <dd>
-      Latitude for location at which to compute composite results.
+      Latitude for location at which to fetch results.
       <br/>Example: <code>34.01</code>
     </dd>
 
     <dt id="longitude">longitude</dt>
     <dd>
-      Longitude for location at which to compute composite results.
+      Longitude for location at which to fetch results.
       <br/>Example: <code>-118.01</code>
     </dd>
 
     <dt id="referenceDocument">referenceDocument</dt>
     <dd>
-      Design code reference document for which to fetch data.
+      Design code reference document corresponding to hazard dataset for
+      which to fetch results.
       <br/>Example: <code>ASCE41-13</code>
     </dd>
   </dl>
@@ -52,7 +60,8 @@
 
         <dt id="output-reference-document">referenceDocument</dt>
         <dd>
-          Identifying the reference document for the returned data.
+          Design code reference document corresponding to hazard dataset for
+          returned results.
           <br/>Example: <code>ASCE41-13</code>
         </dd>
 
@@ -72,13 +81,13 @@
           <dl>
             <dt id="request-parameters-latitude">latitude</dt>
             <dd>
-              Latitude for location at which to compute composite results.
+              Latitude for location at which to fetch results.
               <br/>Example: <code>34.01</code>
             </dd>
 
             <dt id="request-parameters-longitude">longitude</dt>
             <dd>
-              Longitude for location at which to compute composite results.
+              Longitude for location at which to fetch results.
               <br/>Example: <code>-118.01</code>
             </dd>
           </dl>
@@ -94,18 +103,18 @@
           <dl>
             <dt id="response-data-pgad">pgad</dt>
             <dd>
-              Mapped deterministic acceleration value. (Peak Ground
+              Mapped deterministic ground motion value. (Peak Ground
               Acceleration)
-            </dd>
-
-            <dt id="response-data-ssd">ssd</dt>
-            <dd>
-              Mapped deterministic acceleration value. (0.2 second)
             </dd>
 
             <dt id="response-data-s1d">s1d</dt>
             <dd>
-              Mapped deterministic acceleration value. (1.0 second)
+              Mapped deterministic ground motion value. (1.0 s SA)
+            </dd>
+
+            <dt id="response-data-ssd">ssd</dt>
+            <dd>
+              Mapped deterministic ground motion value. (0.2 s SA)
             </dd>
           </dl>
         </dd>
@@ -113,45 +122,22 @@
         <dt id="response-metadata">metadata</dt>
         <dd>
           <dl>
-            <dt id="response-metadata-dataset">dataset</dt>
+            <dt id="response-metadata-interpolation_method">
+              interpolation_method
+            </dt>
             <dd>
-              Identifier for the underlying dataset in the database.
+              Identifier for the interpolation method used to obtain data for
+              location of interest from underlying gridded datasets.
             </dd>
 
-            <dt id="response-metadata-floor_pgad">floor_pgad</dt>
+            <dt id="response-metadata-model_version">model_version</dt>
             <dd>
-              Minimum constraint placed on the deterministic ground motion.
-              (Peak Ground Acceleration)
+              Identifier for the underlying model version in the database.
             </dd>
 
-            <dt id="response-metadata-floor_s1d">floor_s1d</dt>
+            <dt id="response-metadata-region_name">region_name</dt>
             <dd>
-              Minimum constraint placed on the deterministic ground motion.
-              (1.0 second)
-            </dd>
-
-            <dt id="response-metadata-floor_ssd">floor_ssd</dt>
-            <dd>
-              Minimum constraint placed on the deterministic ground motion.
-              (0.2 second)
-            </dd>
-
-            <dt id="response-metadata-percentile_pgad">percentile_pgad</dt>
-            <dd>
-              Factor applyed to 50% ground motion to achieve target percentile
-              ground motion. (Peak Ground Acceleration)
-            </dd>
-
-            <dt id="response-metadata-percentile_s1d">percentile_s1d</dt>
-            <dd>
-              Factor applyed to 50% ground motion to achieve target percentile
-              ground motion. (1.0 second)
-            </dd>
-
-            <dt id="response-metadata-percentile_ssd">percentile_ssd</dt>
-            <dd>
-              Factor applyed to 50% ground motion to achieve target percentile
-              ground motion. (0.2 second)
+              Identifier for the underlying region name in the database.
             </dd>
           </dl>
         </dd>
@@ -186,12 +172,9 @@
       "ssd": 1.35112175,
     },
     "metadata": {
-      "floor_pgad": 0.5,
-      "floor_s1d": 0.6,
-      "floor_ssd": 1.5,
-      "percentile_pgad": 1.8,
-      "percentile_s1d": 1.8,
-      "percentile_ssd": 1.8
+      "interpolation_method": "linear",
+      "model_version": "v3.1.x",
+      "region_name": "E2008R2_COUS0P01_Probabilistic"
     }
   }
 }</pre>
