Create skeleton for Risk Coefficient Endpoint documentation

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -30,8 +30,9 @@
 
   <h2>Component Data End Points</h2>
   <ul>
-    <li><a href="probabilistic.html">Probabilistic</a></li>
     <li><a href="deterministic.html">Deterministic</a></li>
+    <li><a href="probabilistic.html">Probabilistic</a></li>
+    <li><a href="risk-coefficient.html">Risk Coefficient</a></li>
   </ul>
 </main>
 
