--- a/src/htdocs/risk-coefficient.html
+++ b/src/htdocs/risk-coefficient.html
@@ -15,8 +15,8 @@
   <header>
     <h1>Risk Coefficient Endpoint Documentation</h1>
     <p>
-      This endpoint returns mapped risk coefficients at short periods and
-      at 1 second periods.
+      This endpoint returns mapped risk coefficients at 0.2 s SA and
+      at 1 s SA periods.
     </p>
   </header>
 
@@ -164,7 +164,7 @@
     "metadata": {
       "interpolation_method": "linear",
       "model_version": "v3.1.x",
-      "region_name": "E2008R2_COUS0P01_Probabilistic"
+      "region_name": "E2008R2_COUS0P01_Risk_Coefficient"
     }
   }
 }</pre>
