--- a/src/htdocs/risk-coefficient.html
+++ b/src/htdocs/risk-coefficient.html
@@ -117,14 +117,6 @@
         <dt id="response-metadata">metadata</dt>
         <dd>
           <dl>
-            <dt id="response-metadata-interpolation_method">
-              interpolation_method
-            </dt>
-            <dd>
-              Identifier for the interpolation method used to obtain data for
-              location of interest from underlying gridded datasets.
-            </dd>
-
             <dt id="response-metadata-model_version">model_version</dt>
             <dd>
               Identifier for the underlying model version in the database.
@@ -133,6 +125,14 @@
             <dt id="response-metadata-region_name">region_name</dt>
             <dd>
               Identifier for the underlying region name in the database.
+            </dd>
+
+            <dt id="response-metadata-spatial_interpolation_method">
+              spatial_interpolation_method
+            </dt>
+            <dd>
+              Identifier for the interpolation method used to obtain data for
+              location of interest from underlying gridded datasets.
             </dd>
           </dl>
         </dd>
@@ -166,9 +166,9 @@
       "crs": 0.955
     },
     "metadata": {
-      "interpolation_method": "linear",
       "model_version": "v3.1.x",
-      "region_name": "E2008R2_COUS0P01_Risk_Coefficient"
+      "region_name": "E2008R2_COUS0P01_Risk_Coefficient",
+      "spatial_interpolation_method": "linear"
     }
   }
 }</pre>
