--- a/src/htdocs/asce7-16.html
+++ b/src/htdocs/asce7-16.html
@@ -40,7 +40,7 @@
     <dt id="siteClass">siteClass</dt>
     <dd>
       NEHRP site classification.
-      <br/>Example: <code>C</code>
+      <br/>Example: <code>D</code>
     </dd>
 
     <dt id="title">title</dt>
