Adding Git REVISION info to /ws/designmaps

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -37,7 +37,13 @@
 </main>
 
 <footer class="footer">
-Version {{VERSION}}
+  <dl>
+    <dt>Version</dt>
+    <dd>{{VERSION}}</dd>
+
+    <dt>Revision</dt>
+    <dd>{{REVISION}}</dd>
+  </dl>
 </footer>
 
 </body>
