--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -33,6 +33,7 @@
     <li><a href="deterministic.html">Deterministic</a></li>
     <li><a href="probabilistic.html">Probabilistic</a></li>
     <li><a href="risk-coefficient.html">Risk Coefficient</a></li>
+    <li><a href="t-sub-l.html">T-Sub-L</a></li>
   </ul>
 </main>
 
