Made suggested changes to documentation

--- a/src/htdocs/t-sub-l.html
+++ b/src/htdocs/t-sub-l.html
@@ -70,7 +70,7 @@
         <dt id="output-url">url</dt>
         <dd>
           URL to reproduce this result.
-          <br/>Example: <code><span class="url-stub">&hellip;</span>/T-SUB-L.json?latitude=49.370&amp;longitude=-95.135&amp;referenceDocument=ASCE7-10</code>
+          <br/>Example: <code><span class="url-stub">&hellip;</span>/t-sub-l.json?latitude=49.370&amp;longitude=-95.135&amp;referenceDocument=ASCE7-10</code>
         </dd>
         <dt id="request-parameters">parameters</dt>
         <dd>
