--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,6 +25,7 @@
   <h2>Reference Document End Points</h2>
   <ul>
     <li><a href="asce7-16.html">2016 ASCE 7 Standard (ASCE7-16)</a></li>
+    <li><a href="asce7-10.html">2010 ASCE 7 Standard (ASCE7-10)</a></li>
     <li><a href="asce41-13.html">2013 ASCE 41 Standard (ASCE41-13)</a></li>
   </ul>
 
