Updated documentation. Removed model_version from t-sub-l as it does not make sense.

--- a/src/htdocs/deterministic.html
+++ b/src/htdocs/deterministic.html
@@ -122,18 +122,18 @@
         <dt id="response-metadata">metadata</dt>
         <dd>
           <dl>
-            <dt id="response-metadata-model_version">model_version</dt>
+            <dt id="response-metadata-model_version">modelVersion</dt>
             <dd>
               Identifier for the underlying model version in the database.
             </dd>
 
-            <dt id="response-metadata-region_name">region_name</dt>
+            <dt id="response-metadata-region_name">regionName</dt>
             <dd>
               Identifier for the underlying region name in the database.
             </dd>
 
             <dt id="response-metadata-spatial_interpolation_method">
-              spatial_interpolation_method
+              spatialInterpolationMethod
             </dt>
             <dd>
               Identifier for the interpolation method used to obtain data for
@@ -172,9 +172,9 @@
       "ssd": 1.35112175,
     },
     "metadata": {
-      "model_version": "v3.1.x",
-      "region_name": "E2008R2_COUS0P01_Deterministic",
-      "spatial_interpolation_method": "linear"
+      "modelVersion": "v3.1.x",
+      "regionName": "E2008R2_COUS0P01_Deterministic",
+      "spatialInterpolationMethod": "linear"
     }
   }
 }</pre>
