--- a/src/htdocs/t-sub-l.html
+++ b/src/htdocs/t-sub-l.html
@@ -107,11 +107,7 @@
         <dt id="response-metadata">metadata</dt>
         <dd>
           <dl>
-            <dt id="response-metadata-model_version">model_version</dt>
-            <dd>
-              Identifier for the underlying model version in the database.
-            </dd>
-            <dt id="response-metadata-region_name">region_name</dt>
+            <dt id="response-metadata-region_name">regionName</dt>
             <dd>
               Identifier for the underlying region name in the database.
             </dd>
@@ -146,8 +142,7 @@
             "t-sub-l": 4
         },
         "metadata": {
-            "model_version": "v3.1.x",
-            "region_name": "T-Sub-L"
+            "regionName": "T-Sub-L"
         }
     }
 }
