Changed some headers and examples.

--- a/src/htdocs/asce7-10.html
+++ b/src/htdocs/asce7-10.html
@@ -53,7 +53,7 @@
   <h2 id="output">Output</h2>
   <p>Web service response</p>
   <dl>
-    <dt>metadata</dt>
+    <dt>request</dt>
     <dd>
       <dl>
         <dt id="output-date">date</dt>
@@ -98,13 +98,13 @@
                 <dt id="metadata-parameters-riskCategory">riskCategory</dt>
                 <dd>
                   Risk category for structure.
-                  <br/>Example: <code>2</code>
+                  <br/>Example: <code>III</code>
                 </dd>
 
                 <dt id="metadata-parameters-siteClass">siteClass</dt>
                 <dd>
                   NEHRP site classification.
-                  <br/>Example: <code>1</code>
+                  <br/>Example: <code>D</code>
                 </dd>
 
                 <dt id="metadata-parameters-title">title</dt>
@@ -118,7 +118,7 @@
       </dl>
     </dd>
     <dd>
-      <dt id="data">data</dt>
+      <dt id="data">response</dt>
       <dd>
         <dl>
           <dt id="data-data">data</dt>
