--- a/src/htdocs/asce7-16.html
+++ b/src/htdocs/asce7-16.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <title>Design Endpoint Documentation</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
   <link rel="stylesheet" href="https://earthquake.usgs.gov/theme/site/earthquake/index.css"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Merriweather:400,400italic,700|Source+Sans+Pro:400,300,700"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons%7cMerriweather:400,400italic,700%7cSource+Sans+Pro:400,300,700"/>
   <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
@@ -53,7 +53,7 @@
   <h2 id="output">Output</h2>
   <p>Web service response</p>
   <dl>
-    <dt>metadata</dt>
+    <dt>request</dt>
     <dd>
       <dl>
         <dt id="output-date">date</dt>
@@ -65,13 +65,13 @@
         <dt id="output-reference-document">referenceDocument</dt>
         <dd>
           Identifying the reference document for the returned data.
-          <br/>&ldquo;ASCE7-16&rdquo;</code>
+          <br/>Example: <code>&ldquo;ASCE7-16&rdquo;</code>
         </dd>
 
         <dt id="output-status">status</dt>
         <dd>
           String ("success" or "error")
-          <br/>Example: <code>"success"</code>
+          <br/>Example: <code>&ldquo;success&rdquo;</code>
         </dd>
 
         <dt id="output-url">url</dt>
@@ -79,237 +79,233 @@
           URL to reproduce this result.
           <br/>Example: <code><span class="url-stub">{MOUNT_PATH}</span>/asce7-16.json?latitude=34&amp;longitude=-118&amp;riskCategory=I%20or%20II%20or%20III&amp;siteClass=C&amp;title=Example</code>
         </dd>
-        <dl>
-          <dt>parameters</dt>
+        <dt>parameters</dt>
+        <dd>
+          <dl>
+            <dt id="metadata-parameters-latitude">latitude</dt>
             <dd>
-              <dl>
-                <dt id="metadata-parameters-latitude">latitude</dt>
-                <dd>
-                  Latitude for location at which to compute composite results.
-                  <br/>Example: <code>34.01</code>
-                </dd>
-
-                <dt id="metadata-parameters-longitude">longitude</dt>
-                <dd>
-                  Longitude for location at which to compute composite results.
-                  <br/>Example: <code>-118.01</code>
-                </dd>
-
-                <dt id="metadata-parameters-riskCategory">riskCategory</dt>
-                <dd>
-                  Risk category for structure.
-                  <br/>Example: <code>2</code>
-                </dd>
-
-                <dt id="metadata-parameters-siteClass">siteClass</dt>
-                <dd>
-                  NEHRP site classification.
-                  <br/>Example: <code>1</code>
-                </dd>
-
-                <dt id="metadata-parameters-title">title</dt>
-                <dd>
-                  Name for site/report.
-                  <br/>Example: <code>Example</code>
-                </dd>
-              </dl>
+              Latitude for location at which to compute composite results.
+              <br/>Example: <code>34.01</code>
             </dd>
-        </dl>
-      </dl>
-    </dd>
-    <dd>
-      <dt id="data">data</dt>
-      <dd>
-        <dl>
-          <dt id="data-data">data</dt>
-          <dd>
-            <dl>
-              <dt id="data-data-pgauh">pgauh</dt>
-              <dd>
-                Uniform-hazard (2% probability of exceedance in 50 years) Peak
-                Ground Acceleration
-              </dd>
 
-              <dt id="data-data-pgad">pgad</dt>
-              <dd>
-                Factored deterministic acceleration value. (Peak Ground
-                Acceleration)
-              </dd>
+            <dt id="metadata-parameters-longitude">longitude</dt>
+            <dd>
+              Longitude for location at which to compute composite results.
+              <br/>Example: <code>-118.01</code>
+            </dd>
 
-              <dt id="data-data-pga">pga</dt>
-              <dd>
-                MCE<sub>G</sub> peak ground acceleration.
-              </dd>
+            <dt id="metadata-parameters-riskCategory">riskCategory</dt>
+            <dd>
+              Risk category for structure.
+              <br/>Example: <code>2</code>
+            </dd>
 
-              <dt id="data-data-fpga">fpga</dt>
-              <dd>
-                Site amplification factor at PGA
-              </dd>
+            <dt id="metadata-parameters-siteClass">siteClass</dt>
+            <dd>
+              NEHRP site classification.
+              <br/>Example: <code>1</code>
+            </dd>
 
-              <dt id="data-data-pgam">pgam</dt>
-              <dd>
-                Site modified peak ground acceleration.
-              </dd>
-
-              <dt>ssrt</dt>
-              <dd>
-                Probabilistic risk-targeted ground motion. (0.2 second)
-              </dd>
-
-              <dt id="data-data-ssuh">ssuh</dt>
-              <dd>
-                Factored uniform-hazard (2% probability of exceedance in 50
-                years) spectral acceleration.
-              </dd>
-
-              <dt id="data-data-ssd">ssd</dt>
-              <dd>
-                Factored deterministic acceleration value. (0.2 second)
-              </dd>
-
-              <dt id="data-data-ss">ss</dt>
-              <dd>
-                MCE<sub>R</sub> ground motion. (for 0.2 second period)
-              </dd>
-
-              <dt id="data-data-fa">fa</dt>
-              <dd>
-                Site amplification factor at 0.2 second
-              </dd>
-
-              <dt id="data-data-sms">sms</dt>
-              <dd>
-                Site-modified spectral acceleration value.
-              </dd>
-
-              <dt id="data-data-sds">sds</dt>
-              <dd>
-                Numeric seismic design value at 0.2 second SA.
-              </dd>
-
-              <dt id="data-data-sdcs">sdcs</dt>
-              <dd>
-                Seismic design category from sds
-              </dd>
-
-              <dt>s1rt</dt>
-              <dd>
-                Probabilistic risk-targeted ground motion. (1.0 second)
-              </dd>
-
-              <dt id="data-data-s1uh">s1uh</dt>
-              <dd>
-                Factored uniform-hazard (2% probability of exceedance in 50
-                years) spectral acceleration.
-              </dd>
-
-              <dt id="data-data-s1d">s1d</dt>
-              <dd>
-                Factored deterministic acceleration value. (1.0 second)
-              </dd>
-
-              <dt id="data-data-s1">s1</dt>
-              <dd>
-                MCE<sub>R</sub> ground motion. (for 1.0s period)
-              </dd>
-
-              <dt id="data-data-fv">fv</dt>
-              <dd>
-                Site amplification factor at 1.0 second.
-              </dd>
-
-              <dt id="data-data-sm1">sm1</dt>
-              <dd>
-                Site-modified spectral acceleration value.
-              </dd>
-
-              <dt id="data-data-sd1">sd1</dt>
-              <dd>
-                Numeric seismic design value at 1.0 second SA.
-              </dd>
-
-              <dt id="data-data-sdc1">sdc1</dt>
-              <dd>
-                Seismic design category from sd1.
-              </dd>
-
-              <dt id="data-data-sdc">sdc</dt>
-              <dd>
-                Seismic design category from sdcs and sdc1.
-              </dd>
-
-              <dt id="data-data-tl">t-sub-l</dt>
-              <dd>
-                Long-period transition period.
-              </dd>
-
-              <dt id="data-data-sdSpectrum">sdSpectrum</dt>
-              <dd>
-                Seismic design spectrum.
-              </dd>
-
-              <dt id="data-data-smSpectrum">smSpectrum</dt>
-              <dd>
-                Site modified spectrum.
-              </dd>
-            </dl>
-          </dd>
-        </dl>
-        <dl>
-          <dt>metadata</dt>
-          <dd>
-            <dl>
-              <dt id="data-metadata-pgadPercentile">pgadPercentileFactor</dt>
-              <dd>
-                Factor applyed to 50% ground motion to achieve target percentile
-                ground motion. (Peak Ground Acceleration)
-              </dd>
-
-              <dt id="data-metadata-pgadFloor">pgadFloor</dt>
-              <dd>
-                Minimum constraint placed on the deterministic ground motion.
-                (Peak Ground Acceleration)
-              </dd>
-
-              <dt id="data-metadata-s1MaxDirection">s1MaxDirFactor</dt>
-              <dd>
-                Factor applyed to the geometric mean ground motion to get max
-                direction ground motion. (1.0 second)
-              </dd>
-
-              <dt id="data-metadata-s1dPercentile">s1dPercentileFactor</dt>
-              <dd>
-                Factor applyed to 50% ground motion to achieve target percentile
-                ground motion. (1.0 second)
-              </dd>
-
-              <dt id="data-metadata-s1dFloor">s1dFloor</dt>
-              <dd>
-                Minimum constraint placed on the deterministic ground motion.
-                (1.0 second)
-              </dd>
-
-              <dt id="data-metadata-ssMaxDirection">ssMaxDirFactor</dt>
-              <dd>
-                Factor applyed to the geometric mean ground motion to get
-                max direction ground motion. (0.2 second)
-              </dd>
-
-              <dt id="data-metadata-ssPercentile">ssdPercentileFactor</dt>
-              <dd>
-                Factor applyed to 50% ground motion to achieve target percentile
-                ground motion. (0.2 second)
-              </dd>
-
-              <dt id="data-metadata-ssdFloor">ssdFloor</dt>
-              <dd>
-                Minimum constraint placed on the deterministic ground motion.
-                (0.2 second)
-              </dd>
-            </dl>
+            <dt id="metadata-parameters-title">title</dt>
+            <dd>
+              Name for site/report.
+              <br/>Example: <code>Example</code>
+            </dd>
           </dl>
         </dd>
-      </dd>
+      </dl>
+    </dd>
+    <dt id="data">response</dt>
+    <dd>
+      <dl>
+        <dt id="data-data">data</dt>
+        <dd>
+          <dl>
+            <dt id="data-data-pgauh">pgauh</dt>
+            <dd>
+              Uniform-hazard (2% probability of exceedance in 50 years) Peak
+              Ground Acceleration
+            </dd>
+
+            <dt id="data-data-pgad">pgad</dt>
+            <dd>
+              Factored deterministic acceleration value. (Peak Ground
+              Acceleration)
+            </dd>
+
+            <dt id="data-data-pga">pga</dt>
+            <dd>
+              MCE<sub>G</sub> peak ground acceleration.
+            </dd>
+
+            <dt id="data-data-fpga">fpga</dt>
+            <dd>
+              Site amplification factor at PGA
+            </dd>
+
+            <dt id="data-data-pgam">pgam</dt>
+            <dd>
+              Site modified peak ground acceleration.
+            </dd>
+
+            <dt>ssrt</dt>
+            <dd>
+              Probabilistic risk-targeted ground motion. (0.2 second)
+            </dd>
+
+            <dt id="data-data-ssuh">ssuh</dt>
+            <dd>
+              Factored uniform-hazard (2% probability of exceedance in 50
+              years) spectral acceleration.
+            </dd>
+
+            <dt id="data-data-ssd">ssd</dt>
+            <dd>
+              Factored deterministic acceleration value. (0.2 second)
+            </dd>
+
+            <dt id="data-data-ss">ss</dt>
+            <dd>
+              MCE<sub>R</sub> ground motion. (for 0.2 second period)
+            </dd>
+
+            <dt id="data-data-fa">fa</dt>
+            <dd>
+              Site amplification factor at 0.2 second
+            </dd>
+
+            <dt id="data-data-sms">sms</dt>
+            <dd>
+              Site-modified spectral acceleration value.
+            </dd>
+
+            <dt id="data-data-sds">sds</dt>
+            <dd>
+              Numeric seismic design value at 0.2 second SA.
+            </dd>
+
+            <dt id="data-data-sdcs">sdcs</dt>
+            <dd>
+              Seismic design category from sds
+            </dd>
+
+            <dt>s1rt</dt>
+            <dd>
+              Probabilistic risk-targeted ground motion. (1.0 second)
+            </dd>
+
+            <dt id="data-data-s1uh">s1uh</dt>
+            <dd>
+              Factored uniform-hazard (2% probability of exceedance in 50
+              years) spectral acceleration.
+            </dd>
+
+            <dt id="data-data-s1d">s1d</dt>
+            <dd>
+              Factored deterministic acceleration value. (1.0 second)
+            </dd>
+
+            <dt id="data-data-s1">s1</dt>
+            <dd>
+              MCE<sub>R</sub> ground motion. (for 1.0s period)
+            </dd>
+
+            <dt id="data-data-fv">fv</dt>
+            <dd>
+              Site amplification factor at 1.0 second.
+            </dd>
+
+            <dt id="data-data-sm1">sm1</dt>
+            <dd>
+              Site-modified spectral acceleration value.
+            </dd>
+
+            <dt id="data-data-sd1">sd1</dt>
+            <dd>
+              Numeric seismic design value at 1.0 second SA.
+            </dd>
+
+            <dt id="data-data-sdc1">sdc1</dt>
+            <dd>
+              Seismic design category from sd1.
+            </dd>
+
+            <dt id="data-data-sdc">sdc</dt>
+            <dd>
+              Seismic design category from sdcs and sdc1.
+            </dd>
+
+            <dt id="data-data-tl">t-sub-l</dt>
+            <dd>
+              Long-period transition period.
+            </dd>
+
+            <dt id="data-data-sdSpectrum">sdSpectrum</dt>
+            <dd>
+              Seismic design spectrum.
+            </dd>
+
+            <dt id="data-data-smSpectrum">smSpectrum</dt>
+            <dd>
+              Site modified spectrum.
+            </dd>
+          </dl>
+        </dd>
+      </dl>
+      <dl>
+        <dt>metadata</dt>
+        <dd>
+          <dl>
+            <dt id="data-metadata-pgadPercentile">pgadPercentileFactor</dt>
+            <dd>
+              Factor applyed to 50% ground motion to achieve target percentile
+              ground motion. (Peak Ground Acceleration)
+            </dd>
+
+            <dt id="data-metadata-pgadFloor">pgadFloor</dt>
+            <dd>
+              Minimum constraint placed on the deterministic ground motion.
+              (Peak Ground Acceleration)
+            </dd>
+
+            <dt id="data-metadata-s1MaxDirection">s1MaxDirFactor</dt>
+            <dd>
+              Factor applyed to the geometric mean ground motion to get max
+              direction ground motion. (1.0 second)
+            </dd>
+
+            <dt id="data-metadata-s1dPercentile">s1dPercentileFactor</dt>
+            <dd>
+              Factor applyed to 50% ground motion to achieve target percentile
+              ground motion. (1.0 second)
+            </dd>
+
+            <dt id="data-metadata-s1dFloor">s1dFloor</dt>
+            <dd>
+              Minimum constraint placed on the deterministic ground motion.
+              (1.0 second)
+            </dd>
+
+            <dt id="data-metadata-ssMaxDirection">ssMaxDirFactor</dt>
+            <dd>
+              Factor applyed to the geometric mean ground motion to get
+              max direction ground motion. (0.2 second)
+            </dd>
+
+            <dt id="data-metadata-ssPercentile">ssdPercentileFactor</dt>
+            <dd>
+              Factor applyed to 50% ground motion to achieve target percentile
+              ground motion. (0.2 second)
+            </dd>
+
+            <dt id="data-metadata-ssdFloor">ssdFloor</dt>
+            <dd>
+              Minimum constraint placed on the deterministic ground motion.
+              (0.2 second)
+            </dd>
+          </dl>
+        </dd>
+      </dl>
     </dd>
   </dl>
 
