--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -27,6 +27,7 @@
     <li><a href="asce7-16.html">2016 ASCE 7 Standard (ASCE7-16)</a></li>
     <li><a href="asce7-10.html">2010 ASCE 7 Standard (ASCE7-10)</a></li>
     <li><a href="asce41-13.html">2013 ASCE 41 Standard (ASCE41-13)</a></li>
+    <li><a href="asce41-17.html">2017 ASCE 41 Standard (ASCE41-17)</a></li>
   </ul>
 
   <h2>Component Data End Points</h2>
