--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -23,11 +23,16 @@
   </header>
 
   <h2>Reference Document End Points</h2>
+  <h4>ASCE7</h4>
   <ul>
     <li><a href="asce7-16.html">2016 ASCE 7 Standard (ASCE7-16)</a></li>
     <li><a href="asce7-10.html">2010 ASCE 7 Standard (ASCE7-10)</a></li>
-    <li><a href="asce41-13.html">2013 ASCE 41 Standard (ASCE41-13)</a></li>
+    <li><a href="asce7-05.html">2005 ASCE 7 Standard (ASCE7-05)</a></li>
+  </ul>
+  <h4>ASCE41</h4>
+  <ul>
     <li><a href="asce41-17.html">2017 ASCE 41 Standard (ASCE41-17)</a></li>
+    <li><a href="asce41-13.html">2013 ASCE 41 Standard (ASCE41-13)</a></li>
   </ul>
 
   <h2>Component Data End Points</h2>
