--- a/src/htdocs/asce7-16.html
+++ b/src/htdocs/asce7-16.html
@@ -237,7 +237,7 @@
 
             <dt id="data-data-tl">t-sub-l</dt>
             <dd>
-              Long-period transition period
+              Long-period transition period in seconds
             </dd>
 
             <dt id="data-data-cv">cv</dt>
@@ -317,6 +317,14 @@
             <dd>
               Minimum constraint placed on the deterministic ground motion
               (0.2 s)
+            </dd>
+
+            <dt id="response-metadata-spatial_interpolation_method">
+              spatialInterpolationMethod
+            </dt>
+            <dd>
+              Identifier for the interpolation method used to obtain data for
+              location of interest from underlying gridded datasets
             </dd>
           </dl>
         </dd>
