--- a/src/htdocs/asce41-17.html
+++ b/src/htdocs/asce41-17.html
@@ -21,31 +21,31 @@
   <dl>
     <dt id="latitude">latitude</dt>
     <dd>
-      Latitude for location at which to compute composite results.
+      Latitude for location at which to compute composite results
       <br/>Example: <code>34</code>
     </dd>
 
     <dt id="longitude">longitude</dt>
     <dd>
-      Longitude for location at which to compute composite results.
+      Longitude for location at which to compute composite results
       <br/>Example: <code>-118</code>
     </dd>
 
     <dt id="siteClass">siteClass</dt>
     <dd>
-      NEHRP site classification.
+      NEHRP site classification
       <br/>Example: <code>C</code>
     </dd>
 
     <dt id="customProbability">customProbability</dt>
     <dd>
       Target custom probability of exceedance in a 50 year return period as
-      a decimal.
+      a decimal
       <br/>Example: <code>0.10</code>
     </dd>
     <dd class="optional">
       <em>Optional</em>, if not specificed then service returns results for
-      BSE-2N, BSE-1N, BSE-2E, BSE-1E instead.
+      BSE-2N, BSE-1N, BSE-2E, BSE-1E instead
     </dd>
   </dl>
 
@@ -63,7 +63,7 @@
 
         <dt id="output-reference-document">referenceDocument</dt>
         <dd>
-          Identifying the reference document for the returned data.
+          Identifying the reference document for the returned data
           <br/>Example: <code>&ldquo;ASCE41-17&rdquo;</code>
         </dd>
 
@@ -75,7 +75,7 @@
 
         <dt id="output-url">url</dt>
         <dd>
-          URL to reproduce this result.
+          URL to reproduce this result
           <br/>Example: <code>&ldquo;<span class="url-stub">{MOUNT_PATH}</span>/asce41-17.json?latitude=34&amp;longitude=-118&amp;siteClass=C&rdquo;</code>
         </dd>
         <dt>parameters</dt>
@@ -83,13 +83,13 @@
           <dl>
             <dt id="metadata-parameters-latitude">latitude</dt>
             <dd>
-              Latitude for location at which to compute composite results.
+              Latitude for location at which to compute composite results
               <br/>Example: <code>34</code>
             </dd>
 
             <dt id="metadata-parameters-longitude">longitude</dt>
             <dd>
-              Longitude for location at which to compute composite results.
+              Longitude for location at which to compute composite results
               <br/>Example: <code>-118</code>
             </dd>
 
@@ -105,8 +105,16 @@
             <dd>
               Target custom probability of exceedance in a 50 year return
               period as a decimal. Only included if user specified in
-              request.
+              request
               <br/>Example: <code>0.10</code>
+            </dd>
+
+            <dt id="response-metadata-spatial_interpolation_method">
+              spatialInterpolationMethod
+            </dt>
+            <dd>
+              Identifier for the interpolation method used to obtain data for
+              location of interest from underlying gridded datasets
             </dd>
           </dl>
         </dd>
@@ -366,7 +374,7 @@
       <!-- 1-s values -->
       <dt id="output-hazard-level-bse-1e-s1">s1</dt>
       <dd>
-        spectral response
+        spectral response (1.0 s)
       </dd>
 
       <dt id="output-hazard-level-bse-1e-fv">fv</dt>
@@ -394,7 +402,7 @@
     <dl>
       <dt id="t-sub-l-tag">t-sub-l</dt>
       <dd>
-        T-Sub-L data key/value pair
+        Long-period transition period in seconds
       </dd>
     </dl>
   </dd>
