--- a/src/htdocs/asce7-05.html
+++ b/src/htdocs/asce7-05.html
@@ -21,31 +21,31 @@
   <dl>
     <dt id="latitude">latitude</dt>
     <dd>
-      Latitude for location at which to compute composite results.
+      Latitude for location at which to compute composite results
       <br/>Example: <code>34</code>
     </dd>
 
     <dt id="longitude">longitude</dt>
     <dd>
-      Longitude for location at which to compute composite results.
+      Longitude for location at which to compute composite results
       <br/>Example: <code>-118</code>
     </dd>
 
     <dt id="riskCategory">riskCategory</dt>
     <dd>
-      Risk category for structure.
+      Risk category for structure
       <br/>Example: <code>III</code>
     </dd>
 
     <dt id="siteClass">siteClass</dt>
     <dd>
-      NEHRP site classification.
+      NEHRP site classification
       <br/>Example: <code>C</code>
     </dd>
 
     <dt id="title">title</dt>
     <dd>
-      Name for site/report.
+      Name for site/report
       <br/>Example: <code>Example</code>
     </dd>
   </dl>
@@ -64,7 +64,7 @@
 
         <dt id="output-reference-document">referenceDocument</dt>
         <dd>
-          Identifying the reference document for the returned data.
+          Identifying the reference document for the returned data
           <br/>Example: <code>&ldquo;ASCE7-05&rdquo;</code>
         </dd>
 
@@ -76,7 +76,7 @@
 
         <dt id="output-url">url</dt>
         <dd>
-          URL to reproduce this result.
+          URL to reproduce this result
           <br/>Example: <code>&ldquo;<span class="url-stub">{MOUNT_PATH}</span>/asce7-05.json?latitude=34&amp;longitude=-118&amp;riskCategory=III&amp;siteClass=C&amp;title=Example&rdquo;</code>
         </dd>
         <dt>parameters</dt>
@@ -84,31 +84,31 @@
           <dl>
             <dt id="metadata-parameters-latitude">latitude</dt>
             <dd>
-              Latitude for location at which to compute composite results.
+              Latitude for location at which to compute composite results
               <br/>Example: <code>34</code>
             </dd>
 
             <dt id="metadata-parameters-longitude">longitude</dt>
             <dd>
-              Longitude for location at which to compute composite results.
+              Longitude for location at which to compute composite results
               <br/>Example: <code>-118</code>
             </dd>
 
             <dt id="metadata-parameters-riskCategory">riskCategory</dt>
             <dd>
-              Risk category for structure.
+              Risk category for structure
               <br/>Example: <code>&ldquo;III&rdquo;</code>
             </dd>
 
             <dt id="metadata-parameters-siteClass">siteClass</dt>
             <dd>
-              NEHRP site classification.
+              NEHRP site classification
               <br/>Example: <code>&ldquo;C&rdquo;</code>
             </dd>
 
             <dt id="metadata-parameters-title">title</dt>
             <dd>
-              Name for site/report.
+              Name for site/report
               <br/>Example: <code>&ldquo;Example&rdquo;</code>
             </dd>
           </dl>
@@ -178,7 +178,7 @@
 
             <dt id="data-data-tl">t-sub-l</dt>
             <dd>
-              Long-period transition period
+              Long-period transition period in seconds
             </dd>
 
             <dt id="data-data-sdSpectrum">sdSpectrum</dt>
@@ -201,7 +201,8 @@
               spatialInterpolationMethod
             </dt>
             <dd>
-               Spatial interpolation method.
+              Identifier for the interpolation method used to obtain data for
+              location of interest from underlying gridded datasets
             </dd>
           </dl>
         </dd>
