Updated documentation format for adding in NEHRP service documentation

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -40,12 +40,15 @@
     <li><a href="asce7-16.html">2016 ASCE 7 Standard (ASCE7-16)</a></li>
     <li><a href="asce7-10.html">2010 ASCE 7 Standard (ASCE7-10)</a></li>
     <li><a href="asce7-05.html">2005 ASCE 7 Standard (ASCE7-05)</a></li>
-    <li><a href="nehrp2009.html">2009 NEHRP Standard (NEHRP-2009)</a></li>
   </ul>
   <h4>ASCE41</h4>
   <ul>
     <li><a href="asce41-17.html">2017 ASCE 41 Standard (ASCE41-17)</a></li>
     <li><a href="asce41-13.html">2013 ASCE 41 Standard (ASCE41-13)</a></li>
+  </ul>
+  <h4>NEHRP</h4>
+  <ul>
+    <li><a href="nehrp2009.html">2009 NEHRP Standard (NEHRP-2009)</a></li>
   </ul>
 
   <h2>Component Data End Points</h2>
