fixing typo in output
Fix #302

--- a/src/htdocs/ibc-2012.html
+++ b/src/htdocs/ibc-2012.html
@@ -1857,7 +1857,7 @@
       ]
     },
     "metadata": {
-      "model_veresion": "v3.1.x",
+      "modelVersion": "v3.1.x",
       "pgadFloor": 0.6,
       "pgadPercentileFactor": 1.8,
       "s1MaxDirFactor": 1.3,
