--- a/src/htdocs/ibc-2012.html
+++ b/src/htdocs/ibc-2012.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Design Endpoint Documentation</title>
+  <title>IBC-2017 Web Service Documentation</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -13,7 +13,7 @@
 <body>
 <main>
   <header>
-    <h1>IBC-2012 Endpoint Documentation</h1>
+    <h1>IBC-2012 Web Service Documentation</h1>
   </header>
 
   <div class="alert warning">
