--- a/src/htdocs/aashto-2009.html
+++ b/src/htdocs/aashto-2009.html
@@ -70,7 +70,7 @@
 
         <dt id="output-reference-document">referenceDocument</dt>
         <dd>
-          Seismic design reference document, &ldquo;AASHTO-2009&rdquo
+          Seismic design reference document, &ldquo;AASHTO-2009&rdquo;
         </dd>
 
         <dt id="output-status">status</dt>
