--- a/src/htdocs/aashto-2009.html
+++ b/src/htdocs/aashto-2009.html
@@ -201,15 +201,17 @@
                 griddedValuesID
               </dt>
               <dd>
-                Identifier for the underlying gridded values
+                Identifier for underlying gridded values
+                <br/>Possible outputs: <code>"1998-HI-AASHTO-05-050-R1.rnd"</code> for Hawaii, <code>"2002-US-AASHTO-05-050-R1.rnd"</code> for the conterminous United States, <code>"2003-PRVI-AASHTO-05-050-R1.rnd"</code> for Puerto Rico & the U.S. Virgin Islands, <code>"2006-AK-AASHTO-05-050-R1.rnd"</code> for Alaska
               </dd>
 
             <dt id="data-metadata-spatialInterpolationMethod">
               spatialInterpolationMethod
             </dt>
             <dd>
-              Identifier for the interpolation method used to obtain data for
-              location of interest from underlying gridded datasets
+              Identifier for spatial interpolation method used to obtain values
+              for location of interest from underlying gridded values
+              <br/>Possible outputs: <code>"linearlinearlinear"</code> for bilinear
             </dd>
           </dl>
         </dd>
