--- a/src/htdocs/aashto-2009.html
+++ b/src/htdocs/aashto-2009.html
@@ -88,32 +88,22 @@
           <dl>
             <dt id="metadata-parameters-latitude">latitude</dt>
             <dd>
-              Latitude for location at which to compute composite results
-              <br/>Example: <code>34</code>
+              See definitions of request parameters above
             </dd>
 
             <dt id="metadata-parameters-longitude">longitude</dt>
             <dd>
-              Longitude for location at which to compute composite results
-              <br/>Example: <code>-118</code>
-            </dd>
-
-            <dt id="metadata-parameters-riskCategory">riskCategory</dt>
-            <dd>
-              Risk category for structure
-              <br/>Example: <code>&ldquo;III&rdquo;</code>
+              See definitions of request parameters above
             </dd>
 
             <dt id="metadata-parameters-siteClass">siteClass</dt>
             <dd>
-              NEHRP site classification
-              <br/>Example: <code>&ldquo;C&rdquo;</code>
+              See definitions of request parameters above
             </dd>
 
             <dt id="metadata-parameters-title">title</dt>
             <dd>
-              Name for site/report
-              <br/>Example: <code>&ldquo;Example&rdquo;</code>
+              See definitions of request parameters above
             </dd>
           </dl>
         </dd>
